[gd_scene load_steps=44 format=3 uid="uid://c00rq4htojd56"]

[ext_resource type="Script" path="res://script/player.gd" id="1_cc2wa"]
[ext_resource type="Texture2D" uid="uid://c6v8defsgp02r" path="res://assets/characters/player.png" id="2_r2gvh"]
[ext_resource type="PackedScene" uid="uid://64a6p8jlnxii" path="res://scenes/hitbox.tscn" id="3_y1sok"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_66wl8"]
radius = 4.0
height = 10.0

[sub_resource type="Animation" id="Animation_tknyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.48787e-16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox_pivot/attack_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wpv2p"]
resource_name = "back_attack"
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox_pivot/attack_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qwhxq"]
resource_name = "back_idle"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_0iueq"]
resource_name = "back_walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_nrc5b"]
resource_name = "front_attack"
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-4.71239]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox_pivot/attack_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_i43ph"]
resource_name = "front_idle"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_jmnxi"]
resource_name = "front_walk"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_1r73s"]
resource_name = "left_attack"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [107, 106, 105, 104]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox_pivot/attack_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_jidnq"]
resource_name = "left_idle"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [71, 70, 69, 68, 67, 66]
}

[sub_resource type="Animation" id="Animation_5aafc"]
resource_name = "left_walk"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [89, 88, 87, 86, 85, 84]
}

[sub_resource type="Animation" id="Animation_ifnl5"]
resource_name = "right_attack"
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.48787e-16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox_pivot/attack_hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_2pi62"]
resource_name = "right_idle"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_lwvg5"]
resource_name = "right_walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ochsv"]
_data = {
"RESET": SubResource("Animation_tknyk"),
"back_attack": SubResource("Animation_wpv2p"),
"back_idle": SubResource("Animation_qwhxq"),
"back_walk": SubResource("Animation_0iueq"),
"front_attack": SubResource("Animation_nrc5b"),
"front_idle": SubResource("Animation_i43ph"),
"front_walk": SubResource("Animation_jmnxi"),
"left_attack": SubResource("Animation_1r73s"),
"left_idle": SubResource("Animation_jidnq"),
"left_walk": SubResource("Animation_5aafc"),
"right_attack": SubResource("Animation_ifnl5"),
"right_idle": SubResource("Animation_2pi62"),
"right_walk": SubResource("Animation_lwvg5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f026i"]
animation = &"left_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hlokw"]
animation = &"front_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_voquh"]
animation = &"back_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wp5xn"]
animation = &"right_attack"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rrt7d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f026i")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_hlokw")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_voquh")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_wp5xn")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nodrd"]
animation = &"left_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jbn7g"]
animation = &"right_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_40o3l"]
animation = &"front_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k6wxh"]
animation = &"back_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0vgxd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nodrd")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_jbn7g")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_40o3l")
blend_point_2/pos = Vector2(2.08167e-14, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_k6wxh")
blend_point_3/pos = Vector2(2.08167e-14, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vb1ae"]
animation = &"left_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0m034"]
animation = &"front_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tj3g5"]
animation = &"back_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dhke5"]
animation = &"right_walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_24y8j"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vb1ae")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0m034")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_tj3g5")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_dhke5")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qy2ds"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r0qs7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8mcaa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nck8d"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yb0jr"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_51dr3"]
states/End/position = Vector2(465, 98.5938)
states/Start/position = Vector2(84, 99.0469)
states/attack/node = SubResource("AnimationNodeBlendSpace2D_rrt7d")
states/attack/position = Vector2(333.938, 100.688)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_0vgxd")
states/idle/position = Vector2(199, 101.375)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_24y8j")
states/walk/position = Vector2(332.75, 26.625)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_qy2ds"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_r0qs7"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_8mcaa"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_nck8d"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_yb0jr")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_adhsi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ytpi6"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6nnhm"]
radius = 8.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywkji"]
size = Vector2(13, 16.1875)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_cc2wa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_r2gvh")
offset = Vector2(2.08165e-12, -15)
hframes = 6
vframes = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_66wl8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ochsv")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_51dr3")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_adhsi")
parameters/attack/blend_position = Vector2(2.08165e-12, 2.08165e-12)
parameters/idle/blend_position = Vector2(2.08165e-12, 2.08165e-12)
parameters/walk/blend_position = Vector2(2.08165e-12, 2.08165e-12)

[node name="hitbox" parent="." instance=ExtResource("3_y1sok")]
visible = false
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_ytpi6")

[node name="hitbox_pivot" type="Marker2D" parent="."]
visible = false
position = Vector2(2.08165e-12, -3)

[node name="attack_hitbox" type="Area2D" parent="hitbox_pivot"]
position = Vector2(-2.08165e-12, 3)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_pivot/attack_hitbox"]
position = Vector2(11, -3)
shape = SubResource("CapsuleShape2D_6nnhm")
disabled = true

[node name="interact_pivot" type="Marker2D" parent="."]
position = Vector2(0, -6)

[node name="interact" type="Area2D" parent="interact_pivot"]
position = Vector2(0, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_pivot/interact"]
position = Vector2(-10, 7)
shape = SubResource("RectangleShape2D_ywkji")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]

[editable path="hitbox"]
